sample_application/templates/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv-demo
  template:
    metadata:
      labels:
        app: cv-demo
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
    spec:
      containers:
      - name: cv-demo
        image: harness/cv-demo:stable
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 500m
            memory: 50Mi
        readinessProbe:
          httpGet:
            path: /config
            port: http
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 2
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
