sample_application/templates/service.yaml
#
# Service targeting canary only
#
apiVersion: v1
kind: Service
metadata:
  name: cv-demo-canary
spec:
  type: ClusterIP
  ports:
  - name: http-canary
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: cv-demo
    harness.io/track: canary
---
#
# Service targeting stable only
#
apiVersion: v1
kind: Service
metadata:
  name: cv-demo-stable
spec:
  type: ClusterIP
  ports:
  - name: http-stable
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: cv-demo
    harness.io/track: stable
